# mflux-fasthtml

./: README.md  pyproject.toml
src/mflux_fasthtml/: __about__.py  __main__.py
src/mflux_fasthtml/app/: main.py  storage.py  utils.py  worker.py
src/mflux_fasthtml/cli/: __init__.py
tests/: __init__.py
